Bug 90863 - ACCESSIBILITY Controls Apply and Remove in dialog Fields, tab Variables, not accessible by keyboard
Summary: ACCESSIBILITY Controls Apply and Remove in dialog Fields, tab Variables, not ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: a11y, Accessibility Fields
  Show dependency treegraph
 
Reported: 2015-04-25 14:17 UTC by Cor Nouws
Modified: 2019-03-20 17:01 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screen shot dialog Fields, tab Variables (43.86 KB, image/png)
2015-05-04 09:13 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-04-25 14:17:05 UTC
as per subject.

Probably a little side effect of the new .ui dialog
Comment 1 Buovjaga 2015-04-27 19:15:42 UTC
Which dialogs are those?

I tried: right-click text - edit paragraph style. Apply can be reached by tab.
I tried: bullets & numbering after setting it. Remove can be reached by tab.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ (x64)
Build ID: f0edb677f09ad338e22ac3b5d91497b4479e0b3c
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-04-27_01:54:20
Locale: fi_FI
Comment 2 Cor Nouws 2015-05-04 09:13:02 UTC
Created attachment 115303 [details]
screen shot dialog Fields, tab Variables

Hi beluga,

it are the two controls just above the buttons Insert and Close
Comment 3 Buovjaga 2015-05-04 10:40:42 UTC
Thanks. NEW.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ (x64)
Build ID: 393c51cee8bc3de5a2a9f4e04161c59e8712f631
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-05-02_01:20:07
Locale: fi-FI (fi_FI)
Comment 4 QA Administrators 2016-09-20 09:37:28 UTC Comment hidden (obsolete)
Comment 5 Cor Nouws 2017-07-19 10:51:02 UTC
still a problem in Version: 6.0.0.0.alpha0+
Build ID: 1ec04aa8d8f37c82c78d6b98e030a34769d3123e
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-18_22:38:27
Locale: nl-NL (nl_NL.UTF-8); Calc: group
Comment 6 QA Administrators 2018-07-20 02:39:36 UTC Comment hidden (obsolete)
Comment 7 Alex ARNAUD 2018-08-02 18:05:22 UTC
Hello all,

I can reproduce the issue on 6.2.0.0.alpha0+ 
Build ID: d0a481d09e696f6d5a2a0d40a9d5c48cfca559bf

Best regards,
Alex.
Comment 8 Cor Nouws 2019-01-29 12:17:24 UTC
was OK in 3304 > regression.
Nut sure if bibisecting is possible & needed. Adding keyword though
Comment 9 Buovjaga 2019-01-29 15:13:59 UTC
Yes, it was the .ui conversion: https://gerrit.libreoffice.org/plugins/gitiles/core/+/400b3acb1fdbb2578cae1556cb1ac9a0b30ad367%5E!/
convert field var page to .ui

Adding Cc: to Caolán McNamara

I noticed that before the .ui conversion, the control for remove was only accessible, if you tabbed backwards after moving past it.
Comment 10 Caolán McNamara 2019-03-13 17:32:20 UTC
There is no problem in calc's format->cells->numbering which is a similar case. So lets use buttons rather than a toolbar
Comment 11 Commit Notification 2019-03-14 09:00:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0a9094007cb9ad3e37866730c8a66c3ed92eeeb9%5E%21

Resolves: tdf#90863 replace toolbar with apply/remove buttons

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2019-03-20 16:58:38 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: eb128a7d6bbc27b4dbbf9461c81c90e40203b114
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 13 Xisco Faulí 2019-03-20 17:01:34 UTC
This is an old regression. No need for a backport