Resolves: tdf#90863 replace toolbar with apply/remove buttons

which is consistent with the calc format->cells->numbering page
and solves the keyboard traversal problem here

Change-Id: I90c0f4a380693af871bbd20912eafcf5ea259fc7
Reviewed-on: https://gerrit.libreoffice.org/69229
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>